--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+
 /* ---- reset ---- */
 
 html {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -17,12 +20,13 @@ body {
 
 body {
   color: #111;
-  font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 147%;
 }
 
-h1 {}
+h1 {
+  margin: 0;
+}
 
 h2 {}
 
@@ -70,13 +74,6 @@ p {
 
 /* ---- components ---- */
 
-.button {
-  width: 100%;
-  background-color: blue;
-  color: #fff;
-  border: 1px solid #fff
-}
-
 .button-alt {
   color: blue;
   background-color: #fff;
@@ -86,6 +83,14 @@ p {
 
 section {
   width: 550px;
+  height: 580px;
+  margin: 0 auto;
+}
+
+.flex-col-end {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 #canvas {
@@ -100,3 +105,68 @@ section {
   border-left: solid 30px #4A752C;
   border-right: solid 30px #4A752C;
 }
+
+/* Homescreen */
+
+.homescreen {
+  background-color: #50C0FB;
+}
+
+.homescreen div {
+  width: 100%;
+  height: 50%;
+}
+
+.homescreen div:first-child{
+  align-items: center;
+  padding: 20px;
+  position: relative;
+}
+
+.homescreen div:first-child h1{
+  font-size: 60px;
+  margin: 6rem;
+  color: #a2d149;
+}
+
+.homescreen div:first-child button{
+
+  background-color: #2158e8;
+  color: white;
+  border: none;
+  padding: 10px 25px;
+  border-radius: 10px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.homescreen div:first-child button:hover{
+    background-color: #fff;
+    color: #2158e8;
+    transition: 0.5s ease all;
+    cursor: pointer;
+}
+
+.random {
+  width: 10px!important;
+  height: 10px!important;
+  background-color: black;
+  animation-duration: 3s;
+  animation-name: slidein;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+@keyframes slidein {
+  from {
+    top: 0;
+    left: 0;
+  }
+
+  to {
+    top: 50%;
+    left: 50%;
+  }
+}
+
