--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,13 @@ section {
   overflow: hidden;
 }
 
+input {
+  padding: 5px;
+  font-size: 15px;
+  font-family: 'Love Ya Like A Sister', cursive;
+  margin-top: 1%;
+}
+
 .flex-col-end {
   display: flex;
   flex-direction: column;
@@ -126,9 +133,9 @@ section {
   right: 9%;
 }
 .image3 {
-  width:40px;
+  width:35px;
   top: 60%;
-  left: 5%;
+  left: 3%;
 }
 .image4 {
   width:30px;
@@ -145,7 +152,7 @@ section {
 .image6 {
   width:40px;
   top: 5%;
-  right: 30%;
+  right: 25%;
 }
 
 .homescreen div {
@@ -180,7 +187,7 @@ section {
   text-transform: uppercase;
   font-weight: bold;
   margin-bottom:5px;
-  margin-top: 15px;
+  margin-top: 20px;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
 }
@@ -294,5 +301,23 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAKElEQVQoU2
   align-items: center;
 }
 
+.homescreen.game-over div:first-child h1{
+  font-size: 80px;
+  margin-bottom: 30px;
+  margin-top: 80px;
+}
 
+.homescreen.game-over div:first-child h2{
+  margin: 0 5px;
+}
+
+.flex {
+  display:flex;
+  justify-content: center;
+}
+
+.ranking p {
+  margin:10px;;
+  height:100%;
+}
 
